flux/infrastructure/victoria-metrics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-system
  labels:
    gateway-access: "true"
    istio-injection: enabled
