flux/infrastructure/victoria-metrics/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - grafana.stehessel.org
  rules:
    - backendRefs:
        - name: vm-k8s-grafana
          namespace: monitoring-system
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle
  labels:
    app.kubernetes.io/name: vmsingle
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - metrics.stehessel.org
  rules:
    - backendRefs:
        - name: vmsingle-vm-k8s-victoria-metrics-k8s-stack
          namespace: monitoring-system
          port: 8429
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert
  labels:
    app.kubernetes.io/name: vmalert
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - alerts.stehessel.org
  rules:
    - backendRefs:
        - name: vmalert-vm-k8s-victoria-metrics-k8s-stack
          namespace: monitoring-system
          port: 8080
