flux/infrastructure/victoria-metrics/service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - grafana.stehessel.org
  http:
    - route:
        - destination:
            host: vm-k8s-grafana.monitoring-system.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/name: vmsingle
  name: vmsingle
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - metrics.stehessel.org
  http:
    - route:
        - destination:
            host: vmsingle-vm-k8s-victoria-metrics-k8s-stack.monitoring-system.svc.cluster.local
            port:
              number: 8429
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/name: grafana
  name: vmalert
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - alerts.stehessel.org
  http:
    - route:
        - destination:
            host: vmalert-vm-k8s-victoria-metrics-k8s-stack.monitoring-system.svc.cluster.local
            port:
              number: 8080
